# ParallelProgrammingLab2

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  matrix.h  utils.h
my_test/: column_data.txt  data.ipynb  requirements.txt  row_data.txt  test_get_data.py
